# fantasy_football_data_app

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  yoyo.ini
docs/: constant.py  endpoint-structures.md  kafka-topics.md
docs/espn-api-responses/: _espn_2018_full_players_array.json  _espn_2019_full_players_array.json  _espn_2020_full_players_array.json  _league_history_2016.json  espn_resp_None.json  espn_resp_hist_view_mDraftDetail.json  espn_resp_kona_game_state.json  espn_resp_teams_1.json  espn_resp_view_kona_player_info.json  espn_resp_view_mDraftDetail.json  espn_resp_view_mLiveScoring.json  espn_resp_view_mMatchupScore.json  espn_resp_view_mNav.json  espn_resp_view_mPendingTransactions.json  espn_resp_view_mPositionalRatings.json  espn_resp_view_mScoreboard.json  espn_resp_view_mSettings.json  espn_resp_view_mStatus.json  espn_resp_view_mTopPerformers.json
espn-api-responses/: espn_resp_mStandings.json  espn_resp_mTeam.json  espn_resp_modular.json  espn_response_116266.json  espn_response_352921.json  espn_response_635561.json  espn_response_689396.json  espn_response_93789.json
migrations/: 20251005_01_nfMtl-create-initial-tables.sql  20251006_01_MJDlv-create-initial-tables.rollback  20251006_01_MJDlv-create-initial-tables.sql
scripts/: managers.SQL  start-kafka.sh  stop-kafka.sh  tmp-espn-api-copy.py  tmp-espn-api.py
src/etl/: historical_extractors.py  historical_loaders.py  load_historical.py
src/kafka/: consumer_db.py  producer.py
