[project]
requires-python = ">=3.11"

src = ["src", "tests"]

[tool.mypy]
exclude = [
    "migrations/",
    "espn-api-responses/",
    "scripts/",
]

[tool.ruff]
line-length = 88

exclude = [
    "migrations/",
    "espn-api-responses/",
    "data/",
    "scripts/",
]


[tool.ruff.lint]
# Enable rule categories
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings  
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
extend-select = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
# Use single quotes
quote-style = "double"